--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,8 @@
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
